# localcoder

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.agents/skills/flashcards/: SKILL.md
.agents/skills/flashcards/assets/: index.html
.agents/skills/quiz-game/: SKILL.md
.agents/skills/quiz-game/assets/: index.html
.agents/skills/web-app-patterns/: SKILL.md
src/localcoder/: __init__.py  __main__.py  agent.py  agent_session.py  backends.py  bench.py  cli.py  compaction.py  gemma4coder_display.py  localcoder_agent.py  localcoder_display.py  mcp_client.py  safe_commands.py  setup.py  tui.py  voice.py
src/localcoder/templates/ai-app/: package.json  tsconfig.json
src/localcoder/templates/ai-app/src/app/: globals.css  layout.tsx  page.tsx
src/localcoder/templates/ai-app/src/app/api/ai/: route.ts
src/localcoder/templates/ai-app/src/components/: Chat.tsx
src/localcoder/templates/framework/: build.py
src/localcoder/templates/framework/_adapters/: chat.js  image.js  text.js  voice.js
src/localcoder/templates/framework/_server/: package.json  server.js
src/localcoder/templates/framework/_shell/: base.css  base.js
src/localcoder/templates/framework/apps/chatbot/: config.json
src/localcoder/templates/framework/apps/homework-helper/: config.json
src/localcoder/templates/framework/apps/image-analyzer/: config.json
src/localcoder/templates/framework/apps/ingredients-scanner/: config.json
src/localcoder/templates/framework/apps/meeting-notes/: config.json
src/localcoder/templates/framework/apps/photo-todo/: config.json
src/localcoder/templates/framework/apps/translator/: config.json
src/localcoder/templates/framework/apps/voice-analyzer/: config.json
src/localcoder/templates/framework/apps/voice-memo/: config.json
src/localcoder/templates/static/gallery/: index.html
tests/: test_basic.py
