[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localcoder"
version = "0.4.0"
description = "Local AI coding agent with image generation, MCP tools, session persistence. Runs 100% on GPU — Gemma 4 + Flux. No API keys."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Anass Kartit" }]
keywords = ["localcoder", "ai", "coding", "agent", "llama.cpp", "ollama", "gemma4", "qwen", "local"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "huggingface-hub>=0.20",
    "textual>=0.58",
    "ddgs>=7.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.6.0",
]

[project.scripts]
localcoder = "localcoder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/localcoder"]

[tool.hatch.build.targets.sdist]
exclude = [".venv*", "voices/", "*.png", "*.wav", "*.gguf", "node_modules/"]

[project.urls]
Homepage = "https://github.com/AnassKartit/localcoder"
Repository = "https://github.com/AnassKartit/localcoder"
